--- a/src/components/Header/Logo.css
+++ b/src/components/Header/Logo.css
@@ -19,3 +19,73 @@
 		margin-left: 5px;
 	}
 }
+
+.hm-logo {
+	overflow: hidden;
+	text-indent: 100%;
+	white-space: nowrap;
+	display: inline-block;
+	background: url("../../hm-pattern-library/assets/images/logos/logo-black.svg") no-repeat center center;
+	background-size: contain;
+	width: 156px;
+	height: 30px;
+	margin: 1.66667rem 15px;
+	vertical-align: top;
+	opacity: 1.0;
+}
+
+.hm-logo:hover, .hm-logo:focus {
+	opacity: 0.6;
+}
+
+.hm-logo--red {
+	background-image: url("../../hm-pattern-library/assets/images/logos/logo-red.svg");
+}
+
+.hm-logo--white {
+	background-image: url("../../hm-pattern-library/assets/images/logos/logo-white.svg");
+}
+
+.hm-logo--alt {
+	background-image: url("../../hm-pattern-library/assets/images/logos/logo-alt-black.svg");
+	width: 107px;
+	height: 60px;
+}
+
+.hm-logo--alt.hm-logo--red {
+	background-image: url("../../hm-pattern-library/assets/images/logos/logo-alt-red.svg");
+}
+
+.hm-logo--alt.hm-logo--white {
+	background-image: url("../../hm-pattern-library/assets/images/logos/logo-alt-white.svg");
+}
+
+.hm-logo--small {
+	background-image: url("../../hm-pattern-library/assets/images/logos/logo-small-black.svg");
+	width: 52px;
+	height: 30px;
+}
+
+.hm-logo--small.hm-logo--red {
+	background-image: url("../../hm-pattern-library/assets/images/logos/logo-small-red.svg");
+}
+
+.hm-logo--small.hm-logo--white {
+	background-image: url("../../hm-pattern-library/assets/images/logos/logo-small-white.svg");
+}
+
+.hm-logo--tiny {
+	background-image: url("../../hm-pattern-library/assets/images/logos/logo-tiny-black.svg");
+	width: 18px;
+	height: 18px;
+	margin-top: 0.2775rem;
+	margin-bottom: 0.2775rem;
+}
+
+.hm-logo--tiny.hm-logo--red {
+	background-image: url("../../hm-pattern-library/assets/images/logos/logo-tiny-red.svg");
+}
+
+.hm-logo--tiny.hm-logo--white {
+	background-image: url("../../hm-pattern-library/assets/images/logos/logo-tiny-white.svg");
+}
