--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -6,7 +6,7 @@
 .Header-inner {
 	flex-direction: row;
 	display: flex;
-	padding: 0 20px;
+	padding: 0 20px 0 0;
 }
 
 .Header-site-name {
@@ -38,10 +38,6 @@
 }
 
 @media ( max-width: 600px ) {
-	.Header-inner {
-		padding: 0 7px;
-	}
-
 	.Header .SearchInput {
 		display: none;
 	}
