--- a/src/components/Post/Summary.css
+++ b/src/components/Post/Summary.css
@@ -1,11 +1,8 @@
 .Post-Summary {
-	position: absolute;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	bottom: 1em;
-	left: 90px;
-	right: 0;
+	margin: 1em 0 1em 90px;
 	font-size: 14px;
 	color: #aaa;
 }
