Minor cleanup to header button styling

--- a/src/components/Header/HeaderButton.css
+++ b/src/components/Header/HeaderButton.css
@@ -2,7 +2,7 @@
 	display: block;
 	background: rgba(0,0,0,0.05);
 	color: rgba(0,0,0,0.5);
-	height: 60px;
+	padding: 0;
 	width: 180px;
 	text-transform: uppercase;
 	font-weight: 600;
