--- a/src/components/Post/Summary.css
+++ b/src/components/Post/Summary.css
@@ -61,3 +61,16 @@
 	);
 	pointer-events: none;
 }
+
+@media (max-width: 600px) {
+	.Post-Summary {
+		margin-left: 0;
+	}
+}
+
+@media (max-width: 480px) {
+	.Post-Summary {
+		flex-direction: column;
+		align-items: flex-start;
+	}
+}
