--- a/src/components/Message/Content.css
+++ b/src/components/Message/Content.css
@@ -36,6 +36,7 @@
 	border-left: 6px solid #f5f5f5;
 	color: #847F7F;
 	padding-left: 15px;
+	line-height: 1.6;
 }
 
 .PostContent iframe {
@@ -118,4 +119,12 @@
 
 .Tasklist-Item > label > input[type="checkbox"] {
 	margin: 3px 3px 3px 4px;
+}
+
+@media (max-width: 600px) {
+	.PostContent blockquote {
+		padding-left: 10px;
+		margin: 0; /* The nested <p> has its own margins */
+		line-height: 1.5;
+	}
 }
