--- a/src/components/Comment.css
+++ b/src/components/Comment.css
@@ -7,7 +7,7 @@
 	content: '';
 	background: #F1F2EE;
 	left: -41px;
-	top: 0;
+	top: 8px;
 	bottom: 0;
 	width: 3px;
 	z-index: -1;
@@ -43,7 +43,7 @@
 
 @media screen and ( min-width: 783px ) {
 	body.admin-bar .Comment .Comment-Header {
-		top: 131px; /* 32 + 99 */
+		top: 132px; /* 32 + 99 + 1 aesthetic pixel */
 	}
 }
 
