--- a/src/components/Comment/Header.css
+++ b/src/components/Comment/Header.css
@@ -1,8 +1,7 @@
 .Comment-Header {
 	height: 50px;
-	line-height: 40px;
 	display: flex;
-	align-items: flex-start;
+	align-items: center;
 	margin-left: -30px;
 	background: #fff;
 }
@@ -14,6 +13,7 @@
 
 .Comment-Header > strong {
 	flex-grow: 1;
+	line-height: 1.2;
 }
 
 .Comment-Header .actions-wrap {
