--- a/src/components/Comment/Loader.css
+++ b/src/components/Comment/Loader.css
@@ -1,3 +1,9 @@
 .Comment-Loader--mobile {
 	margin-left: -20px;
 }
+
+/* Prevent fixed-aspect loader SVGs from breaking page width */
+.Loader-Wrapper {
+	max-width: 100vw;
+	overflow: hidden;
+}
