--- a/src/components/Message/Content.css
+++ b/src/components/Message/Content.css
@@ -34,6 +34,7 @@
 .PostContent blockquote {
 	font-size: inherit;
 	border-left: 6px solid #f5f5f5;
+	line-height: 1.555;
 	color: #847F7F;
 	padding-left: 15px;
 }
