--- a/src/components/Message/Header.css
+++ b/src/components/Message/Header.css
@@ -87,6 +87,14 @@
 	margin-right: 10px;
 }
 
+.Message-Header__categories li::after {
+	content: ",";
+}
+
+.Message-Header__categories li:last-of-type::after {
+	content: "";
+}
+
 .Message-Header__status {
 	font-size: 14px;
 	margin-left: 10px;
