--- a/src/components/LinkButton.css
+++ b/src/components/LinkButton.css
@@ -9,13 +9,13 @@
 	margin: 0;
 	overflow: visible;
 	color: var( --hm-red );
-	transition: color .2s ease-in, background .2s ease-in, border-width .2s ease-in, border-color .2s ease-in;
+	transition: color .2s ease-in, background .2s ease-in;
 }
 
 .LinkButton:hover,
 .LinkButton:focus {
 	color: var( --hm-red );
 	transition: color .2s ease-out, background .2s ease-out;
-	border-bottom: 2px solid var( --hm-red );
+	text-decoration: underline;
 	outline: none;
 }
