--- a/src/components/CommentsList.css
+++ b/src/components/CommentsList.css
@@ -1,16 +1,14 @@
 .CommentsList {
 	flex-direction: column;
-	margin-left: calc( 30px + 3.333rem + 60px );
+	margin-left: 20px;
 }
 
 .CommentsList .CommentsList {
-	margin-left: 60px;
+	margin-left: 14px;
 }
-.CommentsList .CommentsList .CommentsList {
-	margin-left: 50px;
-}
+
 .CommentsList .CommentsList .CommentsList .CommentsList {
-	margin-left: 40px;
+	margin-left: 0;
 }
 
 .CommentsList .post-reply {
@@ -21,23 +19,22 @@
 	margin-left: 60px;
 }
 
-@media ( max-width: 600px ) {
+@media ( min-width: 600px ) {
 	.CommentsList {
-		margin-left: 20px;
+		margin-left: 69px; /* center under post author icon */
 	}
-	.CommentsList .CommentsList,
-	.CommentsList .CommentsList .CommentsList,
+
+	.CommentsList .CommentsList {
+		margin-left: 43px;
+	}
+
 	.CommentsList .CommentsList .CommentsList .CommentsList {
-		margin-left: 14px;
-	}
-	.CommentsList .CommentsList .CommentsList .CommentsList .CommentsList {
-		margin-left: 0;
+		margin-left: 10px; /* Start overlapping icons: legibility over aesthetics */
 	}
 }
 
-/* Match behavior of .Message-Main in narrow two-column layouts */
-@media ( min-width: 800px ) and ( max-width: 960px ) {
+@media ( min-width: 960px ) {
 	.CommentsList {
-		margin-left: 69px; /* center under post author icon */
+		margin-left: calc( 30px + 3.333rem + 60px ); /* align with content column */
 	}
 }
