--- a/src/components/SearchInput.css
+++ b/src/components/SearchInput.css
@@ -85,3 +85,12 @@
 		margin: 0;
 	}
 }
+
+/* Align header height increase with WP admin bar breakpoint */
+@media ( max-width: 782px ) {
+	.SearchInput input[type=search] {
+		line-height: 1.2;
+		padding-top: 4px;
+		padding-bottom: 4px;
+	}
+}
