--- a/src/components/Message/Content.css
+++ b/src/components/Message/Content.css
@@ -35,9 +35,13 @@
 	font-size: inherit;
 	border-left: 6px solid #f5f5f5;
 	line-height: 1.555;
-	color: #847F7F;
+	color: #5e5a5a;
 	padding-left: 15px;
 	line-height: 1.6;
+}
+
+.PostContent blockquote cite {
+	font-size: 0.9em;
 }
 
 .PostContent iframe {
