--- a/src/components/Comment/Header.css
+++ b/src/components/Comment/Header.css
@@ -74,7 +74,7 @@
 	}
 }
 
-@media ( min-width: 600px ) {
+@media ( min-width: 601px ) {
 	.Comment-Header .actions-wrap {
 		display: flex;
 	}
@@ -85,5 +85,15 @@
 
 	.Comment-Header:hover .Comment-Actions {
 		display: flex;
+	}
+
+	.Comment-Header .actions-wrap,
+	.Comment-Header .Dropdown .btn--small {
+		min-height: 24px;
+	}
+
+	.Comment-Header .btn--small {
+		font-size: 0.8rem;
+		line-height: 1.5555;
 	}
 }
