Make comment richtext field slightly less tall out of the box

--- a/src/components/Message/WriteComment.css
+++ b/src/components/Message/WriteComment.css
@@ -18,6 +18,9 @@
 	margin-top: -1.36667rem;
 }
 
+.WriteComment .Editor-editor {
+	min-height: 12rem;
+}
 
 @media ( max-width: 600px ) {
 	.WriteComment > header {
